--- a/css/products.css
+++ b/css/products.css
@@ -27,3 +27,12 @@
       background-color: lightgrey;
       color: black;
       border-radius: 4px; }
+
+#myModal {
+  position: fixed;
+  z-index: 1;
+  left: 25%;
+  top: 25%;
+  width: 50%;
+  height: 100%;
+  overflow: auto; }
