--- a/sass/products.scss
+++ b/sass/products.scss
@@ -59,3 +59,13 @@ $url_0: url();
         }
     }
 }
+#myModal {
+    position: fixed;
+    z-index: 1;
+    left: 25%;
+    top: 25%;
+    width: 50%;
+    height: 100%;
+    overflow: auto;
+ 
+}
