--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
   padding:45px 0 20px;
   font-size:17px;
   line-height:35px;
-  color: whitesmoke; 
+  color: white;
 }
 .site-footer hr
 {
