--- a/sass/products.scss
+++ b/sass/products.scss
@@ -28,8 +28,10 @@ $url_0: url();
        
     }
     .infoDiv{
+        
         align-content: center;
         
+
 
         .title {
         font-size: 1.9em;
@@ -44,6 +46,10 @@ $url_0: url();
         font-weight: bold;
         text-align: right;
         }
+        .infoRow {
+            
+        }
+
     }
     .buttonDiv {
         justify-content: space-around;
@@ -63,9 +69,9 @@ $url_0: url();
     position: fixed;
     z-index: 1;
     left: 25%;
-    top: 25%;
+    top: 10%;
     width: 50%;
     height: 100%;
     overflow: auto;
- 
+
 }
