--- a/checkout.css
+++ b/checkout.css
@@ -3,55 +3,100 @@
     padding: 0;
 }
 
-.my-carousel {
-    display: flex;
-}
-
 .navbar {
     border-bottom: 2px solid #FF9D00;
 }
 
 body {
-    padding-top: 90px;
+    padding-top: 110px;
 }
 
-.container {
+#productResult {
+    min-width: 50%;
+    min-height: 50%;
+}
+
+#emptyProducts {
+    /* min-width: 50%;
+    min-height: 50%; */
+}
+
+
+/* div {
+    min-width: 30%;
+    min-height: 30%;
+} */
+
+
+/* 
+* {
+    margin: 100;
+    padding: 100;
+} */
+
+
+/* 
+.form-control {
+    margin: 10;
+    padding: 10;
+} */
+
+img {
+    /* max-height: 60px; */
+}
+
+.img-thumbnail {
+    max-height: 60px;
+}
+
+.checkout {
+    background-color: #f2f2f2;
+}
+
+input[type=text] {
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
 }
 
-.container-fluid {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+label {
+    margin-bottom: 10px;
+    display: block;
 }
 
-.row {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+.icon-container {
+    margin-bottom: 20px;
+    padding: 7px 0;
+    font-size: 24px;
 }
 
-#goToTopBtn {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
+.btn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
     border: none;
-    background-color: #FF9D00;
-    color: blue;
+    width: 100%;
+    border-radius: 3px;
     cursor: pointer;
-    padding: 10px;
-    border-radius: 4px;
+    font-size: 17px;
 }
+
+.btn:hover {
+    background-color: #45a049;
+}
+
+span.price {
+    /* float: right; */
+    color: grey;
+}
+
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
+
+@media (max-width: 800px) {}
 
 
 /*footer*/
@@ -190,29 +235,5 @@ body {
         display: block;
         margin-right: 0;
         font-weight: 600
-    }
-}
-
-@media (min-width: 576px) {
-    .container {
-        max-width: 540px;
-    }
-}
-
-@media (min-width: 768px) {
-    .container {
-        max-width: 720px;
-    }
-}
-
-@media (min-width: 992px) {
-    .container {
-        max-width: 960px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1140px;
     }
 }
