--- a/sass/products.scss
+++ b/sass/products.scss
@@ -15,7 +15,7 @@ $url_0: url();
 .productDiv {
     border: 1px solid lightgray;
     border-radius: 5px;
-    height: 430px;
+    height: 365px;
 
         .photoDiv {
            
@@ -61,6 +61,7 @@ $url_0: url();
             background-color: $butbgColor;
             color: $black; 
             border-radius: 4px;
+            margin-top: 8px;
             
         }
     }
