--- a/checkout.css
+++ b/checkout.css
@@ -8,7 +8,12 @@
 }
 
 body {
-    padding-top: 110px;
+    padding-top: 85px;
+    background: url(img/palm.jpg) no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 #productResult {
@@ -47,10 +52,6 @@ img {
 
 .img-thumbnail {
     max-height: 60px;
-}
-
-.checkout {
-    background-color: #f2f2f2;
 }
 
 input[type=text] {
@@ -110,12 +111,7 @@ span.price {
 }
 
 .site-footer hr {
-    border-top-color: #bbb;
-    opacity: 0.5
-}
-
-.site-footer hr.small {
-    margin: 20px 0
+    border: solid 1px #FF9D00;
 }
 
 .site-footer h6 {
@@ -224,10 +220,6 @@ span.price {
 
 .social-icons a.linkedin:hover {
     background-color: #007bb6
-}
-
-.social-icons a.dribbble:hover {
-    background-color: #ea4c89
 }
 
 @media (max-width:767px) {
