--- a/sass/products.css
+++ b/sass/products.css
@@ -1,7 +1,7 @@
 .productDiv {
   border: 1px solid lightgray;
   border-radius: 5px;
-  height: 430px;
+  height: 365px;
 }
 
 .productDiv .photoDiv .photos {
@@ -44,13 +44,14 @@
   background-color: lightgrey;
   color: black;
   border-radius: 4px;
+  margin-top: 8px;
 }
 
 #myModal {
   position: fixed;
   z-index: 1;
   left: 25%;
-  top: 25%;
+  top: 10%;
   width: 50%;
   height: 100%;
   overflow: auto;
