--- a/sass/cart.css
+++ b/sass/cart.css
@@ -25,7 +25,7 @@
 
 body {
   padding-top: 85px;
-  background: url(img/palm.jpg) no-repeat;
+  background: url(../img/palm.jpg) no-repeat;
   background-size: cover;
 }
 
