--- a/css/main.css
+++ b/css/main.css
@@ -1,139 +1,217 @@
-.my-carousel {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+* {
+    margin: 0;
+    padding: 0;
 }
 
+.my-carousel {
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.navbar {
+    border-bottom: 2px solid #FF9D00;
+}
+
+body {
+    padding-top: 90px;
+}
+
+.container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.container-fluid {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+img:hover {
+    transform: scale(1.05);
+    transition: transform .10s;
+}
+
+#goToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    border: none;
+    background-color: #FF9D00;
+    color: blue;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 4px;
+}
+
+
+/*footer*/
+
 .site-footer {
-  background-color: #26272b;
-  padding: 45px 0 20px;
-  font-size: 17px;
-  line-height: 35px;
-  color: whitesmoke;
+    background-color: #26272b;
+    padding: 45px 0 20px;
+    font-size: 17px;
+    line-height: 35px;
+    color: whitesmoke;
 }
 
 .site-footer hr {
-  border-top-color: #bbb;
-  opacity: 0.5;
-}
-
-.site-footer hr.small {
-  margin: 20px 0;
+    border: solid 1px #FF9D00;
 }
 
 .site-footer h6 {
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-  padding-bottom: 20px;
-  letter-spacing: 2px;
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    letter-spacing: 2px;
 }
 
 .footer-contact {
-  padding-left: 0;
-  list-style: none;
+    padding-left: 0;
+    list-style: none
 }
 
 .site-footer .social-icons {
-  text-align: right;
+    text-align: right
 }
 
 .site-footer .social-icons a {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  margin-left: 6px;
-  margin-right: 0;
-  border-radius: 100%;
-  background-color: #33353d;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 6px;
+    margin-right: 0;
+    border-radius: 100%;
+    background-color: #33353d
 }
 
 .copyright-text {
-  margin: 0;
+    margin: 0
 }
 
-@media (max-width: 991px) {
-  .site-footer [class^=col-] {
-    margin-bottom: 30px;
-  }
+@media (max-width:991px) {
+    .site-footer [class^=col-] {
+        margin-bottom: 30px
+    }
 }
 
-@media (max-width: 767px) {
-  .site-footer {
-    padding-bottom: 0;
-  }
-  .site-footer .copyright-text, .site-footer .social-icons {
-    text-align: center;
-  }
+@media (max-width:767px) {
+    .site-footer {
+        padding-bottom: 0
+    }
+    .site-footer .copyright-text,
+    .site-footer .social-icons {
+        text-align: center
+    }
 }
 
 .social-icons {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none
 }
 
 .social-icons li {
-  display: inline-block;
-  margin-bottom: 4px;
+    display: inline-block;
+    margin-bottom: 4px
 }
 
 .social-icons li.title {
-  margin-right: 15px;
-  text-transform: uppercase;
-  color: #96a2b2;
-  font-weight: 700;
-  font-size: 13px;
+    margin-right: 15px;
+    text-transform: uppercase;
+    color: #96a2b2;
+    font-weight: 700;
+    font-size: 13px
 }
 
 .social-icons a {
-  background-color: #eceeef;
-  color: #818a91;
-  font-size: 16px;
-  display: inline-block;
-  line-height: 44px;
-  width: 44px;
-  height: 44px;
-  text-align: center;
-  margin-right: 8px;
-  border-radius: 100%;
-  -webkit-transition: all .2s linear;
-  transition: all .2s linear;
+    background-color: #eceeef;
+    color: #818a91;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 44px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    margin-right: 8px;
+    border-radius: 100%;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear
 }
 
-.social-icons a:active, .social-icons a:focus, .social-icons a:hover {
-  color: #fff;
-  background-color: #29aafe;
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+    color: #fff;
+    background-color: #29aafe
 }
 
 .social-icons.size-sm a {
-  line-height: 34px;
-  height: 34px;
-  width: 34px;
-  font-size: 14px;
+    line-height: 34px;
+    height: 34px;
+    width: 34px;
+    font-size: 14px
 }
 
 .social-icons a.facebook:hover {
-  background-color: #3b5998;
+    background-color: #3b5998
 }
 
 .social-icons a.twitter:hover {
-  background-color: #00aced;
+    background-color: #00aced
 }
 
 .social-icons a.linkedin:hover {
-  background-color: #007bb6;
+    background-color: #007bb6
 }
 
-.social-icons a.dribbble:hover {
-  background-color: #ea4c89;
+@media (max-width:767px) {
+    .social-icons li.title {
+        display: block;
+        margin-right: 0;
+        font-weight: 600
+    }
 }
 
-@media (max-width: 767px) {
-  .social-icons li.title {
-    display: block;
-    margin-right: 0;
-    font-weight: 600;
-  }
+@media (min-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
 }
-/*# sourceMappingURL=main.css.map */
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
+}
