--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -13,32 +13,6 @@ $background_color_6: #29aafe;
 $background_color_7: #3b5998;
 $background_color_8: #00aced;
 $background_color_9: #007bb6;
-
-/* div {
-    min-width: 30%;
-    min-height: 30%;
-} */
-
-
-/* 
-* {
-    margin: 100;
-    padding: 100;
-} */
-
-
-/* 
-.form-control {
-    margin: 10;
-    padding: 10;
-} */
-
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other (and change the direction - make the "cart" column go on top) */
-
-
-/*footer*/
-
 * {
     margin: 0;
     padding: 0;
@@ -50,10 +24,7 @@ $background_color_9: #007bb6;
 
 body {
     padding-top: 85px;
-    background: url(img/palm.jpg) no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url(../img/palm.jpg) no-repeat;
     background-size: cover;
 }
 
@@ -170,7 +141,6 @@ span.price {
         margin-right: 8px;
         border-radius: 100%;
         -webkit-transition: all .2s linear;
-        -o-transition: all .2s linear;
         transition: all .2s linear;
         &:active {
             color: $color_4;
@@ -211,7 +181,7 @@ span.price {
     }
 }
 
-@media (max-width:991px) {
+@media (max-width: 991px) {
     .site-footer {
         [class^=col-] {
             margin-bottom: 30px;
@@ -219,7 +189,7 @@ span.price {
     }
 }
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
     .site-footer {
         padding-bottom: 0;
         .copyright-text {
