--- a/css/products.css
+++ b/css/products.css
@@ -1,3 +1,5 @@
+/*footer*/
+
 * {
     margin: 0;
     padding: 0;
@@ -27,12 +29,14 @@ body {
 }
 
 .productDiv .photoDiv .photos {
+    -o-object-fit: cover;
     object-fit: cover;
     width: 100%;
     height: 200px;
 }
 
 .productDiv .infoDiv {
+    -ms-flex-line-pack: center;
     align-content: center;
 }
 
@@ -54,6 +58,7 @@ body {
 }
 
 .productDiv .buttonDiv {
+    -ms-flex-pack: distribute;
     justify-content: space-around;
     bottom: 0px;
     padding: 0;
@@ -128,7 +133,7 @@ body {
 }
 
 .site-footer .social-icons {
-    text-align: right
+    text-align: right;
 }
 
 .site-footer .social-icons a {
@@ -138,11 +143,7 @@ body {
     margin-left: 6px;
     margin-right: 0;
     border-radius: 100%;
-    background-color: #33353d
-}
-
-.copyright-text {
-    margin: 0
+    background-color: #33353d;
 }
 
 @media (max-width:991px) {
@@ -164,12 +165,12 @@ body {
 .social-icons {
     padding-left: 0;
     margin-bottom: 0;
-    list-style: none
+    list-style: none;
 }
 
 .social-icons li {
     display: inline-block;
-    margin-bottom: 4px
+    margin-bottom: 4px;
 }
 
 .social-icons li.title {
@@ -177,7 +178,7 @@ body {
     text-transform: uppercase;
     color: #96a2b2;
     font-weight: 700;
-    font-size: 13px
+    font-size: 13px;
 }
 
 .social-icons a {
@@ -193,42 +194,39 @@ body {
     border-radius: 100%;
     -webkit-transition: all .2s linear;
     -o-transition: all .2s linear;
-    transition: all .2s linear
+    transition: all .2s linear;
 }
 
 .social-icons a:active,
 .social-icons a:focus,
 .social-icons a:hover {
     color: #fff;
-    background-color: #29aafe
+    background-color: #29aafe;
 }
 
 .social-icons.size-sm a {
     line-height: 34px;
     height: 34px;
     width: 34px;
-    font-size: 14px
+    font-size: 14px;
 }
 
 .social-icons a.facebook:hover {
-    background-color: #3b5998
+    background-color: #3b5998;
 }
 
 .social-icons a.twitter:hover {
-    background-color: #00aced
+    background-color: #00aced;
 }
 
 .social-icons a.linkedin:hover {
-    background-color: #007bb6
+    background-color: #007bb6;
 }
 
 @media (max-width:767px) {
     .social-icons li.title {
         display: block;
         margin-right: 0;
-        font-weight: 600
+        font-weight: 600;
     }
 }
-
-
-/*# sourceMappingURL=products.css.map */
