--- a/css/products.css
+++ b/css/products.css
@@ -1,232 +1,239 @@
 /*footer*/
-
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .navbar {
-    border-bottom: 2px solid #FF9D00;
+  border-bottom: 2px solid #FF9D00;
 }
 
 body {
-    padding-top: 100px;
+  padding-top: 100px;
 }
 
 #maincontainer {
-    color: indianred;
-    padding-bottom: 50px;
+  color: indianred;
+  padding-bottom: 50px;
 }
 
 .nav-item {
-    padding-left: 2vw;
+  padding-left: 2vw;
 }
 
 .productDiv {
-    border: 1px solid lightgray;
-    border-radius: 5px;
-    height: 430px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  height: 430px;
 }
 
 .productDiv .photoDiv .photos {
-    -o-object-fit: cover;
-    object-fit: cover;
-    width: 100%;
-    height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 200px;
 }
 
 .productDiv .infoDiv {
-    -ms-flex-line-pack: center;
-    align-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
 }
 
 .productDiv .infoDiv .title {
-    font-size: 1.6em;
-    padding-top: 10px;
+  font-size: 1.6em;
+  padding-top: 10px;
 }
 
 .productDiv .infoDiv .description {
-    font-size: 0.9em;
-    padding: 4px;
+  font-size: 0.9em;
+  padding: 4px;
 }
 
 .productDiv .infoDiv .price {
-    font-size: 1.4em;
-    color: #373737;
-    font-weight: bold;
-    text-align: right;
+  font-size: 1.4em;
+  color: #373737;
+  font-weight: bold;
+  text-align: right;
 }
 
 .productDiv .buttonDiv {
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-    bottom: 0px;
-    padding: 0;
-    margin: 0;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  bottom: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .productDiv .buttonDiv button {
-    background-color: #FF9D00;
-    opacity: 0.9;
-    color: white;
-    border-radius: 4px;
+  background-color: #FF9D00;
+  opacity: 0.9;
+  color: white;
+  border-radius: 4px;
 }
 
 .productDiv .buttonDiv button:hover {
-    background-color: #FF9D00;
-    border: blue solid 1px;
-    color: blue;
-    cursor: pointer;
+  background-color: #FF9D00;
+  border: blue solid 1px;
+  color: blue;
+  cursor: pointer;
 }
 
 #myModal {
-    position: fixed;
-    z-index: 1;
-    left: 25%;
-    top: 15%;
-    width: 50%;
-    height: 100%;
-    overflow: auto;
+  position: fixed;
+  z-index: 1;
+  left: 25%;
+  top: 15%;
+  width: 50%;
+  height: 100%;
+  overflow: auto;
 }
 
 #myModal button {
-    background-color: #FF9D00;
-    padding: 10px;
-    opacity: 0.9;
-    color: white;
-    border-radius: 4px;
+  background-color: #FF9D00;
+  padding: 10px;
+  opacity: 0.9;
+  color: white;
+  border-radius: 4px;
 }
 
 #myModal button:hover {
-    background-color: #FF9D00;
-    border: blue solid 1px;
-    color: blue;
-    cursor: pointer;
+  background-color: #FF9D00;
+  border: blue solid 1px;
+  color: blue;
+  cursor: pointer;
 }
 
-
-/*footer*/
-
 .site-footer {
-    background-color: #26272b;
-    padding: 45px 0 20px;
-    font-size: 17px;
-    line-height: 35px;
-    color: whitesmoke;
+  background-color: #26272b;
+  padding: 45px 0 20px;
+  font-size: 17px;
+  line-height: 35px;
+  color: whitesmoke;
 }
 
 .site-footer hr {
-    border: solid 1px #FF9D00;
+  border: solid 1px #FF9D00;
 }
 
 .site-footer h6 {
-    color: #fff;
-    font-size: 16px;
-    text-transform: uppercase;
-    padding-bottom: 20px;
-    letter-spacing: 2px;
-}
-
-.footer-contact {
-    padding-left: 0;
-    list-style: none
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  letter-spacing: 2px;
 }
 
 .site-footer .social-icons {
-    text-align: right;
+  text-align: right;
 }
 
 .site-footer .social-icons a {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    margin-left: 6px;
-    margin-right: 0;
-    border-radius: 100%;
-    background-color: #33353d;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #33353d;
 }
 
-@media (max-width:991px) {
-    .site-footer [class^=col-] {
-        margin-bottom: 30px
-    }
+.footer-contact {
+  padding-left: 0;
+  list-style: none;
 }
 
-@media (max-width:767px) {
-    .site-footer {
-        padding-bottom: 0
-    }
-    .site-footer .copyright-text,
-    .site-footer .social-icons {
-        text-align: center
-    }
+.copyright-text {
+  margin: 0;
 }
 
 .social-icons {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
 }
 
 .social-icons li {
-    display: inline-block;
-    margin-bottom: 4px;
+  display: inline-block;
+  margin-bottom: 4px;
 }
 
 .social-icons li.title {
-    margin-right: 15px;
-    text-transform: uppercase;
-    color: #96a2b2;
-    font-weight: 700;
-    font-size: 13px;
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
 }
 
 .social-icons a {
-    background-color: #eceeef;
-    color: #818a91;
-    font-size: 16px;
-    display: inline-block;
-    line-height: 44px;
-    width: 44px;
-    height: 44px;
-    text-align: center;
-    margin-right: 8px;
-    border-radius: 100%;
-    -webkit-transition: all .2s linear;
-    -o-transition: all .2s linear;
-    transition: all .2s linear;
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all .2s linear;
+  transition: all .2s linear;
 }
 
-.social-icons a:active,
-.social-icons a:focus,
+.social-icons a:active {
+  color: #fff;
+  background-color: #29aafe;
+}
+
+.social-icons a:focus {
+  color: #fff;
+  background-color: #29aafe;
+}
+
 .social-icons a:hover {
-    color: #fff;
-    background-color: #29aafe;
-}
-
-.social-icons.size-sm a {
-    line-height: 34px;
-    height: 34px;
-    width: 34px;
-    font-size: 14px;
+  color: #fff;
+  background-color: #29aafe;
 }
 
 .social-icons a.facebook:hover {
-    background-color: #3b5998;
+  background-color: #3b5998;
 }
 
 .social-icons a.twitter:hover {
-    background-color: #00aced;
+  background-color: #00aced;
 }
 
 .social-icons a.linkedin:hover {
-    background-color: #007bb6;
+  background-color: #007bb6;
 }
 
-@media (max-width:767px) {
-    .social-icons li.title {
-        display: block;
-        margin-right: 0;
-        font-weight: 600;
-    }
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
 }
+
+@media (max-width: 991px) {
+  .site-footer [class^=col-] {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
+  }
+  .site-footer .copyright-text {
+    text-align: center;
+  }
+  .site-footer .social-icons {
+    text-align: center;
+  }
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
+  }
+}
+/*# sourceMappingURL=products.css.map */
