--- a/sass/thankyou.scss
+++ b/sass/thankyou.scss
@@ -1,5 +1,6 @@
 $color_main1: #FF9D00;
 $color_main2: blue;
+$color_main3: green;
 $color_w:white;
 body {
     background: url(../img/thk_bg_1.jpg) no-repeat;
