thank you page styling

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -238,3 +238,26 @@ img {
         max-width: 1140px;
     }
 }
+
+.salebox {
+    width: 330px;
+    height: 350px;
+    position: absolute;
+    top: -15px;
+    right: -22px;
+}
+
+.sale {
+    font: bold 44px Sans-Serif;
+    color: white;
+    text-align: center;
+    text-shadow: 4px 4px brown;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    padding: 60px 10px;
+    width: 490px;
+    height: 220px;
+    background: url(../img/christmas-sale.jpg);
+}
