--- a/sass/thankyou.scss
+++ b/sass/thankyou.scss
@@ -23,3 +23,13 @@ body {
         cursor: pointer;
     }
 }
+
+.thk {
+    background-color: rgba(255, 255, 255, 0.5);
+    h2 {
+        text-shadow: 1px 1px black;
+    }
+    #date {
+        text-shadow: 1px 1px black;
+    }
+}
