--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -190,6 +190,8 @@ span.price {
             background-color: $background_color_7;
         }
     }
+
+    // hej
     a.twitter {
         &:hover {
             background-color: $background_color_8;
