--- a/sass/about.scss
+++ b/sass/about.scss
@@ -2,6 +2,18 @@ $color_main1: #FF9D00;
 $color_main2: blue;
 $color_main3: green;
 $color_w:white;
+$color_2: whitesmoke;
+$color_3: #fff;
+$color_4: #96a2b2;
+$color_5: #818a91;
+$background_color_1: #FF9D00;
+$background_color_2: #26272b;
+$background_color_3: #33353d;
+$background_color_4: #eceeef;
+$background_color_5: #29aafe;
+$background_color_6: #3b5998;
+$background_color_7: #00aced;
+$background_color_8: #007bb6;
 * {
     margin: 0;
     padding: 0;
@@ -151,4 +163,5 @@ body {
     }
 }
 
-//test
+
+/*test2*/
