--- a/css/main.css
+++ b/css/main.css
@@ -1,258 +1,268 @@
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .my-carousel {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  display: -webkit-flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: -webkit-flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
 }
 
 .navbar {
-  border-bottom: 2px solid #FF9D00;
+    border-bottom: 2px solid #FF9D00;
 }
 
 body {
-  padding-top: 90px;
+    padding-top: 90px;
 }
 
 .container {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .container-fluid {
-  width: 100%;
-  padding-right: 15px;
-  padding-left: 15px;
-  margin-right: auto;
-  margin-left: auto;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .row {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin-right: -15px;
-  margin-left: -15px;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
 }
 
 img:hover {
-  -webkit-transform: scale(1.05);
-          transform: scale(1.05);
-  -webkit-transition: -webkit-transform .10s;
-  transition: -webkit-transform .10s;
-  transition: transform .10s;
-  transition: transform .10s, -webkit-transform .10s;
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    -webkit-transition: -webkit-transform .10s;
+    transition: -webkit-transform .10s;
+    transition: transform .10s;
+    transition: transform .10s, -webkit-transform .10s;
 }
 
 #goToTopBtn {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  border: none;
-  background-color: #FF9D00;
-  color: blue;
-  cursor: pointer;
-  padding: 10px;
-  border-radius: 4px;
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    border: none;
+    background-color: #FF9D00;
+    color: blue;
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 4px;
 }
 
+
 /*footer*/
+
 .site-footer {
-  background-color: #26272b;
-  padding: 45px 0 20px;
-  font-size: 17px;
-  line-height: 35px;
-  color: whitesmoke;
+    background-color: #26272b;
+    padding: 45px 0 20px;
+    font-size: 17px;
+    line-height: 35px;
+    color: whitesmoke;
 }
 
 .site-footer hr {
-  border: solid 1px #FF9D00;
+    border: solid 1px #FF9D00;
 }
 
 .site-footer h6 {
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-  padding-bottom: 20px;
-  letter-spacing: 2px;
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    letter-spacing: 2px;
 }
 
 .site-footer .social-icons {
-  text-align: right;
+    text-align: right;
 }
 
 .site-footer .social-icons a {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  margin-left: 6px;
-  margin-right: 0;
-  border-radius: 100%;
-  background-color: #33353d;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 6px;
+    margin-right: 0;
+    border-radius: 100%;
+    background-color: #33353d;
 }
 
 .footer-contact {
-  padding-left: 0;
-  list-style: none;
+    padding-left: 0;
+    list-style: none;
 }
 
 .copyright-text {
-  margin: 0;
+    margin: 0;
 }
 
 .social-icons {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none;
 }
 
 .social-icons li {
-  display: inline-block;
-  margin-bottom: 4px;
+    display: inline-block;
+    margin-bottom: 4px;
 }
 
 .social-icons li.title {
-  margin-right: 15px;
-  text-transform: uppercase;
-  color: #96a2b2;
-  font-weight: 700;
-  font-size: 13px;
+    margin-right: 15px;
+    text-transform: uppercase;
+    color: #96a2b2;
+    font-weight: 700;
+    font-size: 13px;
 }
 
 .social-icons a {
-  background-color: #eceeef;
-  color: #818a91;
-  font-size: 16px;
-  display: inline-block;
-  line-height: 44px;
-  width: 44px;
-  height: 44px;
-  text-align: center;
-  margin-right: 8px;
-  border-radius: 100%;
-  -webkit-transition: all .2s linear;
-  transition: all .2s linear;
+    background-color: #eceeef;
+    color: #818a91;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 44px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    margin-right: 8px;
+    border-radius: 100%;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
 }
 
 .social-icons a:active {
-  color: #fff;
-  background-color: #29aafe;
+    color: #fff;
+    background-color: #29aafe;
 }
 
 .social-icons a:focus {
-  color: #fff;
-  background-color: #29aafe;
+    color: #fff;
+    background-color: #29aafe;
 }
 
 .social-icons a:hover {
-  color: #fff;
-  background-color: #29aafe;
+    color: #fff;
+    background-color: #29aafe;
 }
 
 .social-icons a.facebook:hover {
-  background-color: #3b5998;
+    background-color: #3b5998;
 }
 
 .social-icons a.twitter:hover {
-  background-color: #00aced;
+    background-color: #00aced;
 }
 
 .social-icons a.linkedin:hover {
-  background-color: #007bb6;
+    background-color: #007bb6;
 }
 
 .social-icons.size-sm a {
-  line-height: 34px;
-  height: 34px;
-  width: 34px;
-  font-size: 14px;
+    line-height: 34px;
+    height: 34px;
+    width: 34px;
+    font-size: 14px;
 }
 
 @media (max-width: 991px) {
-  .site-footer [class^=col-] {
-    margin-bottom: 30px;
-  }
+    .site-footer [class^=col-] {
+        margin-bottom: 30px;
+    }
 }
 
 @media (max-width: 767px) {
-  .site-footer {
-    padding-bottom: 0;
-  }
-  .site-footer .copyright-text {
-    text-align: center;
-  }
-  .site-footer .social-icons {
-    text-align: center;
-  }
-  .social-icons li.title {
-    display: block;
-    margin-right: 0;
-    font-weight: 600;
-  }
+    .site-footer {
+        padding-bottom: 0;
+    }
+    .site-footer .copyright-text {
+        text-align: center;
+    }
+    .site-footer .social-icons {
+        text-align: center;
+    }
+    .social-icons li.title {
+        display: block;
+        margin-right: 0;
+        font-weight: 600;
+    }
 }
 
 .salebox {
-  width: 330px;
-  height: 350px;
-  position: absolute;
-  top: -15px;
-  right: -22px;
+    width: 330px;
+    height: 350px;
+    position: absolute;
+    top: -15px;
+    right: -22px;
 }
 
 .sale {
-  font: bold 44px Sans-Serif;
-  color: white;
-  text-align: center;
-  text-shadow: 4px 4px brown;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  padding: 60px 10px;
-  width: 490px;
-  height: 220px;
-  background: url(../img/christmas-sale.jpg);
+    font: bold 44px Sans-Serif;
+    color: white;
+    text-align: center;
+    text-shadow: 4px 4px brown;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    padding: 60px 10px;
+    width: 490px;
+    height: 220px;
+    background: url(../img/christmas-sale.jpg);
 }
 
 @media (min-width: 576px) {
-  .container {
-    max-width: 540px;
-  }
+    .container {
+        max-width: 540px;
+    }
 }
 
 @media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
+    .container {
+        max-width: 720px;
+    }
 }
 
 @media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
+    .container {
+        max-width: 960px;
+    }
 }
 
 @media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
+    .container {
+        max-width: 1140px;
+    }
 }
+
+@media (max-width: 992px) {
+    .salebox {
+        display: none;
+    }
+}
+
+
 /*# sourceMappingURL=main.css.map */
