--- a/sass/cart.scss
+++ b/sass/cart.scss
@@ -35,7 +35,54 @@ body {
     min-width: 50%;
     min-height: 50%;
 }
-
+.productDiv {
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    height: 360px;
+    .photoDiv {
+        .photos {
+            object-fit: cover;
+            width: 100%;
+            height: 200px;
+        }
+    }
+    .infoDiv {
+        align-content: center;
+        .title {
+            font-size: 1.6em;
+            padding-top: 10px;
+        }
+        .description {
+            font-size: 0.9em;
+            padding: 4px;
+        }
+        .price {
+            font-size: 1.4em;
+            color: $color_2;
+            font-weight: bold;
+            text-align: right;
+        }
+    }
+    .buttonDiv {
+        justify-content: space-around;
+        bottom: 0px;
+        padding: 0;
+        margin: 0;
+        button {
+            background-color: $background_color_1;
+            opacity: 0.9;
+            color: $color_3;
+            border-radius: 4px;
+            margin-top: 7px;
+            &:hover {
+                background-color: $background_color_1;
+                border: blue solid 1px;
+                color: $color_4;
+                cursor: pointer;
+            }
+        }
+    }
+}
 .img-thumbnail {
     max-height: 60px;
 }
