--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@ $color_2: whitesmoke;
 $color_3: #fff;
 $color_4: #96a2b2;
 $color_5: #818a91;
+$color_6: black;
 $background_color_1: #FF9D00;
 $background_color_2: #26272b;
 $background_color_3: #33353d;
@@ -48,6 +49,77 @@ body {
     margin-right: auto;
     margin-left: auto;
 }
+.productDiv {
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    height: 360px;
+    .photoDiv {
+        .photos {
+            object-fit: cover;
+            width: 100%;
+            height: 200px;
+        }
+    }
+    .infoDiv {
+        align-content: center;
+        .title {
+            font-size: 1.6em;
+            padding-top: 10px;
+        }
+        .description {
+            font-size: 0.9em;
+            padding: 4px;
+        }
+        .price {
+            font-size: 1.4em;
+            color: $color_6;
+            font-weight: bold;
+            text-align: right;
+        }
+    }
+    .buttonDiv {
+        justify-content: space-around;
+        bottom: 0px;
+        padding: 0;
+        margin: 0;
+        button {
+            background-color: $background_color_1;
+            opacity: 0.9;
+            color: $color_3;
+            border-radius: 4px;
+            margin-top: 7px;
+            &:hover {
+                background-color: $background_color_1;
+                border: blue solid 1px;
+                color: $color_4;
+                cursor: pointer;
+            }
+        }
+    }
+}
+
+#myModal {
+    position: fixed;
+    z-index: 1;
+    left: 25%;
+    top: 15%;
+    width: 50%;
+    height: 100%;
+    overflow: auto;
+    button {
+        background-color: $background_color_1;
+        padding: 10px;
+        opacity: 0.9;
+        color: $color_3;
+        border-radius: 4px;
+        &:hover {
+            background-color: $background_color_1;
+            border: blue solid 1px;
+            color: $color_4;
+            cursor: pointer;
+        }
+    }
+}
 
 .row {
     display: -ms-flexbox;
@@ -58,12 +130,7 @@ body {
     margin-left: -15px;
 }
 
-img {
-    &:hover {
-        transform: scale(1.05);
-        transition: transform .10s;
-    }
-}
+
 
 #goToTopBtn {
     display: none;
